--- a/src/assets/scss/sleek.scss
+++ b/src/assets/scss/sleek.scss
@@ -43,3 +43,33 @@
 @import 'tables';
 @import 'widgets';
 @import 'error';
+
+
+/* 
+custom style for custom page 
+*/
+.custom-page {
+    height: 1000px;
+
+    .position-fixed {
+        width: 1140px;
+        a {
+            color: inherit;
+        }
+    }
+
+    .page-content {
+        margin-top: 160px;
+    }
+
+    @media screen  and (max-width:992px){
+
+        .page-content {
+            margin-top: inherit;
+        }
+
+        .position-fixed {
+            position: relative !important;
+        }
+    }
+}
