--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -9,7 +9,8 @@ $grid-breakpoints: (
 );
 
 // Colors
-$primary:       #4c84ff !default;
+
+$primary:       #007bff !default;
 $dark:          #1b223c !default;
 $secondary:     #8a909d !default;
 $gray-100:      #f5f6fa !default;
@@ -20,6 +21,7 @@ $success:       #29cc97 !default;
 $info:          #13cae1 !default;
 $warning:       #fec400 !default;
 $danger:        #fe5461 !default;
+
 $inverse:       #070707 !default;
 $purple:        #896def !default;
 $white:         #ffffff !default;
