--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -13,6 +13,7 @@ $primary:       #007bff !default;
 $dark:          #1b223c !default;
 $secondary:     #8a909d !default;
 $gray-100:      #f5f6fa !default;
+$gray-dark:     #343a40 !default;
 $border-color:  #e5e9f2 !default;
 $navy:          #212a39 !default;
 $pink:          #ff548e !default;
